--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,16 +1,17 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: RealmDiamond
-    network: kovan
+    network: matic
     source:
-      address: "0xFAefD30Af8E86d3d8D22fa5caEFD48fAA2Fa8E21"
+      address: "0x1D0360BaC7299C86Ec8E99d0c1C9A95FEfaF2a11"
       abi: RealmDiamond
+      startBlock: 20667840
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - DiamondCut
@@ -20,21 +21,13 @@ dataSources:
         - ApprovalForAll
         - MintParcel
         - Transfer
-        - OwnershipTransferred2
-        - Approval1
-        - ApprovalForAll1
-        - MintParcel1
-        - Transfer1
+
       abis:
         - name: RealmDiamond
           file: ./abis/RealmDiamond.json
       eventHandlers:
-        - event: DiamondCut(address,bytes)
-          handler: handleDiamondCut
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred1
         - event: Approval(indexed address,indexed address,indexed uint256)
           handler: handleApproval
         - event: ApprovalForAll(indexed address,indexed address,bool)
@@ -43,14 +36,4 @@ dataSources:
           handler: handleMintParcel
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred2
-        - event: Approval(indexed address,indexed address,indexed uint256)
-          handler: handleApproval1
-        - event: ApprovalForAll(indexed address,indexed address,bool)
-          handler: handleApprovalForAll1
-        - event: MintParcel(indexed address,indexed uint256)
-          handler: handleMintParcel1
-        - event: Transfer(indexed address,indexed address,indexed uint256)
-          handler: handleTransfer1
       file: ./src/mapping.ts
