--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -78,3 +78,32 @@ dataSources:
         # - event: Auction_ItemClaimed(indexed uint256)
         # handler: handleAuction_ItemClaimed
       file: ./src/mapping_gbm.ts
+  - kind: ethereum/contract
+    name: Baazaar
+    network: "matic"
+    source:
+      address: "0x86935F11C86623deC8a25696E1C19a8659CbF95d"
+      abi: Baazaar
+      startBlock: 20667840
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - ERC721ListingAdd
+        - ERC721ExecutedListing
+        - ERC721ListingCancelled
+        - ERC721ListingRemoved
+      abis:
+        - name: Baazaar
+          file: "./abis/AavegotchiBaazaarERC721.json"
+      eventHandlers:
+        - event: ERC721ListingAdd(indexed uint256,indexed address,address,uint256,indexed uint256,uint256)
+          handler: handleERC721ListingAdd
+        - event: ERC721ExecutedListing(indexed uint256,indexed address,address,address,uint256,indexed uint256,uint256,uint256)
+          handler: handleERC721ExecutedListing
+        - event: ERC721ListingCancelled(indexed uint256,uint256,uint256)
+          handler: handleERC721ListingCancelled
+        - event: ERC721ListingRemoved(indexed uint256,uint256,uint256)
+          handler: handleERC721ListingRemoved
+      file: ./src/mapping_baazaar.ts
